# parsian_ssl

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CONTRIBUTE  CONTRIBUTING.md  README.md  install.sh  project.config
parsian_ai/: CMakeLists.txt  ahz.files  ahz.includes  deps.sh  direct.xml  direct_CMakeLists.txt  install.sh  mahi.xml  mahi_CMakeLists.txt  move_forward.xml  move_forward_CMakeLists.txt  nodelet.xml  package.xml  setup.py
parsian_ai/cfg/: ai.cfg  behavior_server.cfg  def_test.cfg  direct.cfg  mahi.cfg  move_forward.cfg
parsian_ai/include/: planmessagehandler.h  planstruct.h
parsian_ai/include/PlanServer/: plan_server_node.h  plan_server_nodelet.h
parsian_ai/include/PlanServer/util/: PlanStruct.h  loadplayoffjson.h
parsian_ai/include/behavior/mahi/: mahi.h  (+1 more)
parsian_ai/include/parsian_ai/: ai.h  aiNodelet.h  ai_nodelet.h  coach.h  config.h  exprimental.h  gamestate.h  mahi.h  soccer.h
parsian_ai/include/plan_server/: plan_server_nodelet.h  planselector.h
parsian_ai/launch/: ai.launch
parsian_ai/plans/: 2p_1.json  2p_2.json  8_1.json  8_2.json  8_3.json  after.json  chip_2P.json  hamidPlan.json  hello.json  hshm1.json  hshm2.json  kianPlan.json  mhmmd.json  mhmmd2.json  nadia1.json  nadia2.json  nakhNama.json  plans.ignore  semi_2p_2.json  semi_nadia1.json  semi_nadia1_2.json  update.sh
parsian_ai/plans/11/: simple1.json  simple2.json
parsian_ai/plans/2Pass/: 2pass.json  mahi.json  new.json  pass.json  vasat.json
parsian_ai/plans/ERforce/: mhmmdMid.json  mrlFriendlyFar.json  nakhNama.json  template  template.json
parsian_ai/plans/ZJu/: zjuBug.json  zjuBug2Rush.json
parsian_ai/plans/afterlife/: 4R_after_pos.json  5R_after_pos.json  after.json
parsian_ai/plans/fateme/: NewPlan.json  middleLastShot.json  middleStart.json  nearPArea.json
parsian_ai/plans/global/: middle2P.json  middle_imm.json
parsian_ai/plans/kickoff/: kickoff.json  kickoff2.json  prs_kickoff_chip.json  prs_kickoff_pass.json
parsian_ai/plans/mahi/: 2pass.json  f.json  mahi-kickoff-002.json  mahi.json
parsian_ai/plans/mahisama/: f.json  mahi-kickoff-002.json  mahi.json
parsian_ai/plans/mrl/: robocupGoal.json  robocupGoalMain.json
parsian_ai/plans/old_plans/: 8.json  8_2.json  8_2P.json  hshm1.json  hshm2.json  kianPlan.json  nadia2.json  semi_2p_2.json  semi_nadia1_2.json
parsian_ai/scripts/: docWatch.py  planserver.py  planserver_node.py
parsian_ai/scripts/auto_defense_test/: def_test.py  def_test_node.py  point.py
parsian_ai/scripts/behavior_server/: behavior_server_node.py  best_selector.py
parsian_ai/scripts/plan_server/: docWatch.py  planserver_node.py
parsian_ai/scripts/plan_stuff/: docWatch.py  fileWatcher.py  loadPlan.py
parsian_ai/src/: aiNodelet.cpp  ai_node.cpp  ai_nodelet.cpp  planmessagehandler.cpp
parsian_ai/src/PlanServer/: plan_server_node.cpp  plan_server_nodelet.cpp
parsian_ai/src/parsian_ai/: ai.cpp  ai_node.cpp  ai_nodelet.cpp  coach.cpp  config.cpp  gamestate.cpp  soccer.cpp
parsian_ai/src/plan_server/: plan_server_node.cpp  plan_server_nodelet.cpp  planselector.cpp
parsian_protobuf_wrapper/: CMakeLists.txt  grsim_nodelet_plugin.xml  package.xml  refree_nodelet_plugin.xml  vision_nodelet_plugin.xml
parsian_protobuf_wrapper/cfg/: Common.cfg  RefBox.cfg  SSLVision.cfg  grsim.cfg  proto.cfg  referee.cfg  vision.cfg
parsian_protobuf_wrapper/launch/: proto_nodelet.launch  protos.launch
parsian_protobuf_wrapper/param/: common.yaml
parsian_protobuf_wrapper/proto/: .messages_robocup_ssl_detection.proto.swp  robot_status.proto
parsian_protobuf_wrapper/src/grsim/: grsim_node.cpp  grsim_nodelet.cpp  grsimnode.cpp  grsimnodelet.cpp
parsian_protobuf_wrapper/src/ssl-refbox/: parsian_referee.cpp  parsian_referee_node.cpp  parsian_referee_nodelet.cpp
parsian_protobuf_wrapper/src/ssl-vision/: parsian_vision.cpp  parsian_vision_node.cpp  parsian_vision_nodelet.cpp
parsian_protobuf_wrapper/test/: VisionTest.cpp  VisionTest.test
parsian_util/: CMakeLists.txt  package.xml
parsian_util/include/: MLP.h  NNFPP.h  Object.h  SmartPointer.h  WMatching.h  balltracker.h  gamelogger.h  hysteresisedcheck.h  kalman.h  pid.h  rng.h  robottracker.h  shotProfile.h  tracker.h
parsian_util/include/parsian_util/: base.h  geom.h  knowledge.h  mathtools.h  matrix.h  statemachine.h
parsian_util/include/structs/: agent.h
parsian_util/proto/: multi_team_communication.proto
parsian_util/src/: MLP.cpp  NNFPP.cpp  Object.cpp  WMatching.cpp  balltracker.cpp  gamelogger.cpp  hysteresisedcheck.cpp  kalman.cpp  knowledge.cpp  mathtools.cpp  matrix.cpp  pid.cpp  robottracker.cpp  shotProfile.cpp  statemachine.cpp  tracker.cpp
parsian_util/src/action/: action.cpp  actiongotopoint.cpp  actiongotopointavoid.cpp
parsian_util/src/core/: agent.cpp  ball.cpp  field.cpp  knowledge.cpp  movingobject.cpp  robot.cpp  team.cpp  worldmodel.cpp
parsian_util/src/geom/: angle_deg.cpp  circle_2d.cpp  composite_region_2d.cpp  convex_hull.cpp  delaunay_triangulation.cpp  geom.cpp  line_2d.cpp  matrix_2d.cpp  polygon_2d.cpp  ray_2d.cpp  rect_2d.cpp  sector_2d.cpp  segment_2d.cpp  triangle_2d.cpp  triangulation.cpp  vector_2d.cpp  voronoi_diagram_original.cpp  voronoi_diagram_triangle.cpp
parsian_util/src/tools/: debuger.cpp  drawer.cpp  filewatcher.cpp
parsian_vision_wrapper/: CMakeLists.txt  package.xml
parsian_vision_wrapper/cfg/: network.cfg
parsian_vision_wrapper/src/: parsian_vision.cpp
parsian_world_model/: CMakeLists.txt  nodelet.xml  package.xml
parsian_world_model/cfg/: world_model.cfg
parsian_world_model/include/parsian_world_model/: config.h  worldmodel_nodelet.h
parsian_world_model/launch/: worldmodel.launch
parsian_world_model/param/: .field.yaml.swp  field.yaml
parsian_world_model/src/: config.cpp  worldmodel.cpp  worldmodel_node.cpp  worldmodel_nodelet.cpp
parsian_world_model/src/util/: balltracker.cpp  kalman.cpp  matrix.cpp  robottracker.cpp  tracker.cpp
parsian_world_model/src/wm/: ball.cpp  halfworld.cpp  movingobject.cpp  rawobject.cpp  robot.cpp  visionbelief.cpp  visionclient.cpp  worldmodel.cpp
(+588 files in other folders)
